Qute slides/example updates

--- a/examples/qute/src/main/resources/templates/HelloResource/hello.html
+++ b/examples/qute/src/main/resources/templates/HelloResource/hello.html
@@ -9,7 +9,7 @@
    <p>Hello {name ?: "Jean"}!</p>
    <ul>
    {#for header in headers.sorted.reversed}
-      <li>{header}</li>
+      <li>{header.toLowerCase}</li>
    {/for}
    </ul>
    <hr>
