Qute - last update

--- a/examples/qute/src/main/resources/templates/HelloResource/hello.html
+++ b/examples/qute/src/main/resources/templates/HelloResource/hello.html
@@ -12,7 +12,8 @@
       <li>{header.toLowerCase}</li>
    {/for}
    </ul>
-   <hr>
    Uptime: {cdi:system.upTime.seconds} s
+   <hr>
+   Generated at {now}
 </body>
 </html>
