--- a/examples/qute/src/main/resources/templates/pub/systemInfo.html
+++ b/examples/qute/src/main/resources/templates/pub/systemInfo.html
@@ -14,6 +14,8 @@
       Up-time: {cdi:system.upTime.seconds} s
       {/fragment}
     </div>
-   </p>
+   
+   <hr>
+   Generated at {now}
 </body>
 </html>
